--- a/pokemonGO/src/app/tab3/tab3.page.html
+++ b/pokemonGO/src/app/tab3/tab3.page.html
@@ -1,17 +1,42 @@
+<!-- tab3.page.html -->
+
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    <ion-title>Pokédex</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Pokédex</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-grid>
+    <ion-row *ngFor="let pokemon of capturedPokemons">
+      <ion-col size="6">
+        <ion-card>
+          <ion-card-header >
+            <ion-card-title>{{ pokemon.name }}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-img [src]="pokemon.sprites.front_default"></ion-img>
+            <ion-item>
+              <ion-label>Vitórias:</ion-label>
+              <ion-badge [color]="getBadgeColor(pokemon.victories)">{{ pokemon.victories }}</ion-badge>
+            </ion-item>
+            <ion-item>
+              <ion-label>Derrotas:</ion-label>
+              <ion-badge [color]="getBadgeColor(pokemon.defeats)">{{ pokemon.defeats }}</ion-badge>
+            </ion-item>
+            <ion-item>
+              <ion-label>Empates:</ion-label>
+              <ion-badge [color]="getBadgeColor(pokemon.draws)">{{ pokemon.draws }}</ion-badge>
+            </ion-item>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
