--- a/pokemonGO/src/app/tab3/tab3.page.html
+++ b/pokemonGO/src/app/tab3/tab3.page.html
@@ -1,5 +1,3 @@
-<!-- tab3.page.html -->
-
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Pokédex</ion-title>
@@ -14,29 +12,30 @@
   </ion-header>
 
   <ion-grid>
-    <ion-row *ngFor="let pokemon of capturedPokemons">
-      <ion-col size="6">
+    <ion-row class="ion-wrap">
+      <ion-col size="6" size-md="6" *ngFor="let pokemon of capturedPokemons">
         <ion-card>
-          <ion-card-header >
+          <ion-card-header>
             <ion-card-title>{{ pokemon.name }}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <ion-img [src]="pokemon.sprites.front_default"></ion-img>
             <ion-item>
-              <ion-label>Vitórias:</ion-label>
-              <ion-badge [color]="getBadgeColor(pokemon.victories)">{{ pokemon.victories }}</ion-badge>
+              <ion-label color="success">Vitórias:</ion-label>
+              <ion-badge [color]="getBadgeColor(pokemon.victories)" color="success">{{ pokemon.victories }}</ion-badge>
             </ion-item>
             <ion-item>
-              <ion-label>Derrotas:</ion-label>
-              <ion-badge [color]="getBadgeColor(pokemon.defeats)">{{ pokemon.defeats }}</ion-badge>
+              <ion-label color="danger">Derrotas:</ion-label>
+              <ion-badge [color]="getBadgeColor(pokemon.defeats)" color="danger">{{ pokemon.defeats }}</ion-badge>
             </ion-item>
             <ion-item>
-              <ion-label>Empates:</ion-label>
-              <ion-badge [color]="getBadgeColor(pokemon.draws)">{{ pokemon.draws }}</ion-badge>
+              <ion-label color="warning">Empates:</ion-label>
+              <ion-badge [color]="getBadgeColor(pokemon.draws)" color="warning">{{ pokemon.draws }}</ion-badge>
             </ion-item>
           </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
+  
 </ion-content>
